force-app/main/default/objects/coeffTh__c/coeffTh__c.object-meta.xml
<CustomObject>
    <description>Objets stockant les coefficients thermiques des produits et des options (QuoteLine). Utilisé pour Kube2</description>
    <label>Coefficient Thermique</label>
    <nameField>
        <displayFormat>CTH/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coefficients Thermiques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>