force-app/main/default/objects/coeffTh__c/fields/coef1__c.field-meta.xml
<CustomField>
    <fullName>coef1__c</fullName>
    <label>Nom coefficient n°1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>