force-app/main/default/objects/coeffTh__c/fields/coef2__c.field-meta.xml
<CustomField>
    <fullName>coef2__c</fullName>
    <label>Nom coefficient n°2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>