force-app/main/default/objects/coeffTh__c/fields/dateDebut__c.field-meta.xml
<CustomField>
    <fullName>dateDebut__c</fullName>
    <label>Début de période de validité</label>
    <required>true</required>
    <type>Date</type>
</CustomField>