force-app/main/default/objects/coeffTh__c/fields/dateFin__c.field-meta.xml
<CustomField>
    <fullName>dateFin__c</fullName>
    <label>Fin de période de validité</label>
    <type>Date</type>
</CustomField>