force-app/main/default/objects/coeffTh__c/fields/famille__c.field-meta.xml
<CustomField>
    <fullName>famille__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Famille</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Coefficients Thermiques</relationshipLabel>
    <relationshipName>coefficientsThermiques</relationshipName>
    <type>Lookup</type>
</CustomField>