force-app/main/default/objects/coeffTh__c/fields/option1__c.field-meta.xml
<CustomField>
    <fullName>option1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Option n°1</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Coefficients Thermiques</relationshipLabel>
    <relationshipName>coefficientsThermiques1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>