force-app/main/default/objects/coeffTh__c/fields/option2__c.field-meta.xml
<CustomField>
    <fullName>option2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option n°2</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Coefficients Thermiques (Option n°2)</relationshipLabel>
    <relationshipName>coefficientsThermiques2</relationshipName>
    <type>Lookup</type>
</CustomField>