force-app/main/default/objects/coeffTh__c/fields/option3__c.field-meta.xml
<CustomField>
    <fullName>option3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option n°3</label>
    <referenceTo>ReferentielOptions__c</referenceTo>
    <relationshipLabel>Coefficients Thermiques (Option n°3)</relationshipLabel>
    <relationshipName>coefficientsThermiques3</relationshipName>
    <type>Lookup</type>
</CustomField>