force-app/main/default/objects/coeffTh__c/fields/unite1__c.field-meta.xml
<CustomField>
    <fullName>unite1__c</fullName>
    <label>Unité n°1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>