force-app/main/default/objects/coeffTh__c/fields/unite2__c.field-meta.xml
<CustomField>
    <fullName>unite2__c</fullName>
    <label>Unité n°2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>