force-app/main/default/objects/coeffTh__c/fields/valeurCoef1__c.field-meta.xml
<CustomField>
    <fullName>valeurCoef1__c</fullName>
    <label>Coefficient n°1</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>