force-app/main/default/objects/coeffTh__c/fields/valeurCoef2__c.field-meta.xml
<CustomField>
    <fullName>valeurCoef2__c</fullName>
    <label>Coefficient n°2</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>