force-app/main/default/objects/coeffTh__c/validationRules/VR001_K2_CoefTh_DateFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_CoefTh_DateFin</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $User.ByPassValidationRule__c == FALSE,
  NOT(ISNULL(dateFin__c)),
  dateFin__c &lt; dateDebut__c
)</errorConditionFormula>
    <errorDisplayField>dateFin__c</errorDisplayField>
    <errorMessage>Date de fin de période de validité invalide (doit être supérieure à la date de début)!</errorMessage>
</ValidationRule>