force-app/main/default/objects/coeffTh__c/validationRules/VR001_K2_CoefTh_FamilleObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_CoefTh_FamilleObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $User.ByPassValidationRule__c == FALSE,
  ISNULL(famille__c)
)</errorConditionFormula>
    <errorDisplayField>famille__c</errorDisplayField>
    <errorMessage>Famille de produit obligatoire!</errorMessage>
</ValidationRule>