force-app/main/default/objects/coeffTh__c/validationRules/VR001_K2_CoefTh_Option3.validationRule-meta.xml
<ValidationRule>
    <fullName>VR001_K2_CoefTh_Option3</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  $User.ByPassValidationRule__c == FALSE,
  NOT(ISNULL(option3__c)),
  ISNULL(option2__c)
)</errorConditionFormula>
    <errorDisplayField>option2__c</errorDisplayField>
    <errorMessage>Option n°2 obligatoire (option n°3 renseignée)!</errorMessage>
</ValidationRule>