force-app/main/default/objects/coeffTh__c/listViews/EUTHERPE.listView-meta.xml
<ListView>
    <fullName>EUTHERPE</fullName>
    <columns>NAME</columns>
    <columns>valeurCoef1__c</columns>
    <columns>dateDebut__c</columns>
    <columns>dateFin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>famille__c</field>
        <operation>contains</operation>
        <value>EUTHERPE</value>
    </filters>
    <label>EUTHERPE</label>
    <language>fr</language>
</ListView>