force-app/main/default/objects/coeffTh__c/listViews/Porte_d_entr_e_PVC_semi_vitr_e_contempor.listView-meta.xml
<ListView>
    <fullName>Porte_d_entr_e_PVC_semi_vitr_e_contempor</fullName>
    <columns>NAME</columns>
    <columns>valeurCoef1__c</columns>
    <columns>dateDebut__c</columns>
    <columns>dateFin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>famille__c</field>
        <operation>contains</operation>
        <value>Porte d&apos;entrée PVC semi-vitrée contemporaine modèle Blanpain</value>
    </filters>
    <label>Porte d&apos;entrée PVC semi-vitrée contempor</label>
    <language>fr</language>
</ListView>